// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div
  class="false betweenBottomMargin-2 betweenBottom"
>
  <div
    class="row containsTooltip"
  >
    <label
      class="resetLabel label"
      for="the-input"
    >
      <div
        class="false betweenRightMargin-2 betweenRight alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The input
        </span>
      </div>
    </label>
  </div>
  <div
    class="false horizontalPadding-3 default"
    data-testid="inputWrapper"
  >
    <div
      class="false betweenRightMargin-3 betweenRight sizing"
    >
      <div
        class="false fullWidth"
      >
        <input
          aria-invalid="false"
          class="input"
          id="the-input"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="false betweenBottomMargin-2 betweenBottom"
>
  <div
    class="row containsTooltip"
  >
    <label
      class="resetLabel label"
      for="the-input"
    >
      <div
        class="false betweenRightMargin-2 betweenRight alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The input
        </span>
      </div>
    </label>
  </div>
  <div
    class="false horizontalPadding-3 error"
    data-testid="inputWrapper"
  >
    <div
      class="false betweenRightMargin-3 betweenRight sizing"
    >
      <div
        class="false fullWidth"
      >
        <input
          aria-invalid="true"
          class="input"
          id="the-input"
          type="text"
          value=""
        />
      </div>
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <i
          aria-label="The value of this input field is invalid."
          class="iconExclamationPointCircle error size16"
        />
      </div>
    </div>
  </div>
</div>
`;
